# science_ops_cli

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
science_ops/: cli.py  config.py
science_ops/tools/: __init__.py  analysis.py  astro.py  bio.py  bioseq.py  chem.py  config_cli.py  constants.py  data.py  em.py  lab_notebook.py  labcalc.py  mech.py  optics.py  physics_constants.py  relativity.py  stats.py  units.py  waves.py
science_ops/utils/: __init__.py  display.py  io.py  math_helpers.py
science_ops_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_astro.py  test_bio.py  test_chem.py  test_cli_analysis.py  test_cli_astro.py  test_cli_bio.py  test_cli_bioseq.py  test_cli_chem.py  test_cli_config.py  test_cli_data.py  test_cli_em.py  test_cli_help_all.py  test_cli_labcalc.py  test_cli_mech.py  test_cli_notebook.py  test_cli_optics.py  test_cli_relativity.py  test_cli_stats.py  test_cli_units.py  test_cli_waves.py  test_config.py  test_constants.py  test_mech.py  test_relativity.py  test_units.py
